Twitch and Touhou updated again

--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -1259,6 +1259,9 @@ a,
     border: none;
     box-shadow: none;
 }
+.theme-dark .option-96V44q.selected-rZcOL-:after {
+    background: none;
+}
 .theme-dark .resultsGroup-r_nuzN .header-2N-gMV {
     color: #EFD9C3;
 }
