--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -1525,7 +1525,7 @@
 
 .theme-dark .item-2J1YMK:active, 
 .theme-dark .item-2J1YMK:hover {
-        background-color: white;
+        background-color: rgba(255,255,255,.32);
 }
 
 .botTagRegular-2HEhHi,
