--- a/Theme_Group_2/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_2/BokuNoHeroAcademia.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"BokuNoHeroAcademia","description":"A theme dedicated to Boku No Hero Academia","author":"DevilsLynAvenged","version":"1"}*//{}
 .app {
-	background-image: url("https://u.imageresize.org/b252cdcf-d19c-4435-8aed-c605cec6dc20.jpeg");
+	background-image: url("https://images8.alphacoders.com/736/736903.jpg");
    background-size: cover !important;
 	background-position: center !important;
 }
