--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -1,6 +1,6 @@
 //META{"name":"Danganronpa_Theme","description":"A theme dedicated to Danganronpa","author":"DevilsLynAvenged","version":"1"}*//{}
 .app {
-	background-image: url("https://u.imageresize.org/51924e45-24ae-410a-9229-9080ce48b3ae.jpeg");
+	background-image: url("https://static.zerochan.net/Danganronpa.full.1581183.jpg");
    background-size: cover !important;
 	background-position: center !important;
 }
